--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Dependencies
 node_modules/
 bun.lockb
+opencode-skills/
 
 # Build output
 dist/
@@ -28,11 +29,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OpenCode
-.opencode/plugin/
-.opencode/node_modules/
-.opencode/bun.lock
-.opencode/package.json
+# OpenCode local development
+.opencode/
+opencode.json
 
 # Test files
 *.test.ts
