--- a/package.json
+++ b/package.json
@@ -27,13 +27,25 @@
     "@opencode-ai/plugin": "*"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.2",
     "@types/node": "^20.0.0",
     "bun-types": "^1.3.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
     "typescript": "^5.0.0"
   },
   "scripts": {
     "build": "tsc",
-    "test": "echo \"No tests yet\""
+    "test": "echo \"No tests yet\"",
+    "prepare": "husky",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
+    "format": "biome format --write ."
+  },
+  "lint-staged": {
+    "*.{ts,js,json}": [
+      "biome check --write --no-errors-on-unmatched"
+    ]
   },
   "files": [
     "src",
