--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,6 @@
     "rootDir": "./src",
     "types": ["node", "bun-types"]
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    ".opencode",
-    "opencode-skills"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", ".opencode", "opencode-skills"]
 }
